[package]
name = "mb2-speaker-final-boss"
version = "0.1.0"
edition = "2024"

[dependencies]
critical-section-lock-mut = "0.1.2"
nrf52833-hal = "0.18.0"
embedded-hal = "1.0.0"
cortex-m-rt = "0.7.5"
microbit-v2 = "0.15.1"
rtt-target = "0.6.1"
panic-rtt-target = "0.2.0"
libm = "0.2.15"

[dependencies.cortex-m]
version = "0.7.7"
features = ["critical-section-single-core", "inline-asm"]

[dependencies.keytones]
version = "0.2"
git = "https://github.com/BartMassey/keytones"
default-features = false

[features]
div1 = []
up = []
invert = []
ext = []
